@@ -24,7 +24,7 @@
   * html formatter (and subsequently the textmate formatter) header fills in completely when running a single example
   * config.include now accepts an array of types (config.include(Helpers, :type => [:view, :controller]))
   
-* 8 bug fixes
+* 9 bug fixes
 
   * fixed bug where {:a => 1, :b => 2}.should include(:a, :b) failed (Yossef Mendelssohn)
   * only try to load Test::Unit if Test::Unit is defined (not just Test)
@@ -34,6 +34,7 @@
   * Check whether test/unit has really been loaded before calling a method it defines (Brian Donovan). Closes #503.
   * Fix spec_path for shared groups (Zach Dennis). Closes #615.
   * stubbed message expectation not verified if it has been called *before* the expectation (Matthias Hennemeyer). Closes #637.
+  * stubs calculate return value by executing block passed to #and_return (hint from Aisha Fenton). Closes #642.
   
 === Version 1.1.11 / 2008-10-24
 
